Fixed logs not showing properly BUG #10

--- a/src/Components/Dashboard.css
+++ b/src/Components/Dashboard.css
@@ -21,3 +21,7 @@
 	max-width: 400px;
     margin: 12px;
 }
+
+.showLog {
+    display: table-row;
+}
